@@ -114,7 +114,7 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.8</version>
+        <version>0.8.11</version>
         <executions>
           <execution>
             <id>default-prepare-agent</id>
@@ -188,7 +188,7 @@
         <configuration>
           <detectJavaApiLink>true</detectJavaApiLink>
           <links>
-            <link>https://docs.oracle.com/en/java/javase/20/docs/api</link>
+            <link>https://docs.oracle.com/en/java/javase/21/docs/api</link>
           </links>
           <author>false</author>
           <nodeprecatedlist>true</nodeprecatedlist>
@@ -196,8 +196,12 @@
           <splitindex>true</splitindex>
           <reportOutputDirectory>${basedir}/docs</reportOutputDirectory>
           <destDir>javadoc</destDir>
-          <excludePackageNames>org.cojen.tupl.unsafe:org.cojen.tupl.core:org.cojen.tupl.ev:org.cojen.tupl.jmx:org.cojen.tupl.views:org.cojen.tupl.rows:org.cojen.tupl.table.filter:org.cojen.tupl.remote</excludePackageNames>
-          <!-- <additionalOptions>-Xdoclint:none</additionalOptions> -->
+          <excludePackageNames>org.cojen.tupl.unsafe:org.cojen.tupl.core:org.cojen.tupl.ev:org.cojen.tupl.jmx:org.cojen.tupl.views:org.cojen.tupl.table:org.cojen.tupl.table.codec:org.cojen.tupl.table.filter:org.cojen.tupl.table.join:org.cojen.tupl.remote</excludePackageNames>
+          <quiet>true</quiet>
+          <additionalOptions>-Xdoclint:accessibility</additionalOptions>
+          <additionalOptions>-Xdoclint:html</additionalOptions>
+          <additionalOptions>-Xdoclint:reference</additionalOptions>
+          <additionalOptions>-Xdoclint:syntax</additionalOptions>
         </configuration>
         <executions>
           <execution>
@@ -221,7 +225,8 @@
           <parallel>classes</parallel>
           <perCoreThreadCount>false</perCoreThreadCount>
           <threadCount>6</threadCount>
-          <argLine>-Xmx5g --enable-preview</argLine>
+          <argLine>-Xmx5g</argLine>
+          <!--argLine>${argLine} -Xmx5g</argLine>-->
         </configuration>
       </plugin>
 
